# mortgage-burndown

./: .gitignore  README.md  app.py  currency.py  justfile  main.py  mortgage.py  pyproject.toml
src/mortgage_burndown/: __init__.py  __main__.py  app.py  mortgage.py
templates/: index.html
